--- a/index.html
+++ b/index.html
@@ -19,8 +19,6 @@
             <a href="#contact">Contact</a>
         </nav>
     </header>
-
-
     <section class="home" id="home">
         <div class="home-content">
             <h3>Hi! Myself</h3>
@@ -32,7 +30,8 @@
                 <a href="#facebook"><i class="fa-brands fa-square-facebook"></i></a>
                 <a href="#instagram"><i class="fa-brands fa-instagram"></i></a>
                 <a href="#x"><i class="fa-brands fa-square-x-twitter"></i></a>
-                <a href="linkedin"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/sherikar-murali-kartheek-reddy-79103720b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
+                <a href="http://github.com/kartheekreddy160" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
