add profile link feature

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
 
             <div class="social-media">
                 <a href="#facebook"><i class="fa-brands fa-square-facebook"></i></a>
-                <a href="#instagram"><i class="fa-brands fa-instagram"></i></a>
-                <a href="#x"><i class="fa-brands fa-square-x-twitter"></i></a>
+                <a href="https://www.instagram.com/kartheekreddy_160/profilecard/?igsh=dWV6ZG00bnEyOTV6" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://x.com/Kartheek6085994?t=5GTAyeJnamLOiXFVARDCgw&s=08" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/sherikar-murali-kartheek-reddy-79103720b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="http://github.com/kartheekreddy160" target="_blank"><i class="fa-brands fa-github"></i></a>
+                <a href="https://youtube.com/@theweekendrides?si=3-7CPFYUGTVBI7sm" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </div>
             <a href="#" class="btn">Download CV</a>
         </div>
@@ -54,13 +55,9 @@
                 <p>
                     I thrive in collaborative environments and enjoy working on challenging projects that push me to learn and grow. When I'm not coding, I explore new technologies and keep up with industry trends.
                 </p>
-                <a href="#" class="btn">Read more</a>
-          
+                <a href="#" class="btn">Read more</a>   
         </div>
-
     </section>
-
-
     <section class="services" id="services">
         <h2 class="heading">My <span>Services</span></h2>
 
