--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
             <div class="social-media">
                 <a href="#facebook"><i class="fa-brands fa-square-facebook"></i></a>
-                <a href="https://www.instagram.com/kartheekreddy_160/profilecard/?igsh=dWV6ZG00bnEyOTV6" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                <a href="instagram" target="_blank"><i class="fa-brands fa-instagram"></i></a>
                 <a href="https://x.com/Kartheek6085994?t=5GTAyeJnamLOiXFVARDCgw&s=08" target="_blank"><i class="fa-brands fa-square-x-twitter"></i></a>
                 <a href="https://www.linkedin.com/in/sherikar-murali-kartheek-reddy-79103720b/" target="_blank"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="http://github.com/kartheekreddy160" target="_blank"><i class="fa-brands fa-github"></i></a>
