--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="http://github.com/kartheekreddy160" target="_blank"><i class="fa-brands fa-github"></i></a>
                 <a href="https://youtube.com/@theweekendrides?si=3-7CPFYUGTVBI7sm" target="_blank"><i class="fa-brands fa-youtube"></i></a>
             </div>
-            <a href="#" class="btn">Download CV</a>
+            <a href="./assets/Sherikar-Murali-Kartheek-Reddy-FlowCV-Resume-20241220 (1).pdf" target="_blank" class="btn">Download CV</a>
         </div>
 
         <div class="home-img">
